--- a/20161210.html
+++ b/20161210.html
@@ -33,7 +33,7 @@
 <p><h3>0x06 恢复</h3></p>
     了解到具体的事故原因后，我们将进入恢复阶段，此时我们需要进行必要的修复工作，以确保此类事故不会再次发生。具体的修复手段包括限制网段的访问、关闭无用服务、限制请求频率、安装最新漏洞修复补丁或修改程序的代码等。无论恢复措施的具体细节如何，在实施恢复措施后，都必须遵循变更管理流程，对所实施的措施进行严格的验证与评估，防止引入新的脆弱性或无法经受另一次的攻击。
     事故的结束由下列因素决定：事故的性质或类别、想得到的事故响应结果（业务恢复、系统还原）以及我们成功确定事故的来源和根本原因。一旦确定事故结束后，最后需要问自己如下三个问题：
-<ul><li>发生了什么事情?</li><li>我们得到什么教训？</li><li>下次如何做得更好？</li>这些都是需要我们对事故及处理过程进行回顾，以帮助我们了解需要在事故响应过程和文档中添加什么内容，并确立持续改善的目标。</ul>
+<ul><li>发生了什么事情?</li><li>我们得到什么教训？</li><li>下次如何做得更好？</li><li>这些都是需要我们对事故及处理过程进行回顾，以帮助我们了解需要在事故响应过程和文档中添加什么内容，并确立持续改善的目标。</li></ul>
  
 <p><h3>0x07 总结</h3></p>
     我们在实际处理事故或应急响应的时候可能不会马上想到上面的流程，都是凭经验进行处理或分析，但是在处理完成后仔细想想都会落到上述的六个阶段中。监控与响应是一个对人综合要求满高的岗位（自己说好像有点自夸的意思，哈哈），这就要求所有成员及时更新技术知识，以应对日益复杂的信息安全环境。无论是通过日常工作，或者平时看一些论坛、微博资讯，或者自己去报一些培训班等等，都要给自己创造机会提升能力.
