--- a/20161210.html
+++ b/20161210.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-<body>
+<body bgcolor="yellow">
 
-<h1>安全事故响应的一般过程</h1>
+<h1 align="center">安全事故响应的一般过程</h1>
 
 
 <p><h3>0x00 概述</h2></p>
