--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Building in 2016.12.10
+<!DOCTYPE HTML>
+<html>
+<body
+
+<h1 align="center">Study everyday!</h1>
+<p>Building in 2016.12.10</p>
+
+<p>
+<a href="/20161210.html">20161210-安全事故响应的一般过程</a>
+</p>
+
+</body>
+</html>
