--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <a href="/20161210.html">20161210-安全事故响应的一般过程</a>
 </p>
 
+<p>
+<a href="/20170204.html">20170204-shell脚本实例手册</a>
+</p>
+
 </body>
 </html>
