--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <p>Building in 2016.12.10</p>
 
 <p>
-<a href="/20161210.html">20161210-安全事故响应的一般过程</a>
+<a href="/20161210.html">01-安全事故响应的一般过程</a>
 </p>
 
 <p>
-<a href="/20170204.html">20170204-shell脚本实例手册</a>
+<a href="/20170204.txt">02-shell脚本实例手册</a>
 </p>
 
 </body>
