--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <p>Building in 2016.12.10</p>
 
 <p>
+<a href="/0.txt">00-github_blog</a>
+</p>
+
+<p>
 <a href="/20161210.html">01-安全事故响应的一般过程</a>
 </p>
 
