--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body
 
-<h1 align="center">Study everyday!</h1>
-<p>Building in 2016.12.10</p>
+<h1 align="center">Go GO GO</h1>
+<p> 2016.12.10</p>
 
 <p>
 <a href="/0.txt">00-github_blog</a>
