change stye of index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
-<!DOCTYPE HTML>
 <html>
-<body
+ 
+<head>
+<meta http-equiv="Content-Language" content="zh-cn">
+<meta http-equiv="Content-Type" content="text/html; charset=utf8">
+<title>yeyinttomorrow</title>
+<meta name="keywords" content="yeyinttomorrow">
+<meta name="description" content="yeyinttomorrow">
+</head>
+ 
+<body bgcolor="#808080">
+ 
+<div style="position: absolute; width: 450px; height: 550px; z-index: 1; left: 400px; top: 60px; padding-left: 60px; padding-right: 60px; padding-top: 90px; padding-bottom: 60px; background-color: #FFFFFF" id="layer1">
+<p align="center"><b>yeyinttomorrow</b></p>
 
 <h1 align="center">Go GO GO</h1>
 <p> 2016.12.10</p>
@@ -37,6 +48,7 @@
 <a href="/pic/opensoc.jpg">06-opensoc </a>
 </p>
 
-
+ 
 </body>
+ 
 </html>
