--- a/0.html
+++ b/0.html
@@ -12,43 +12,60 @@
  
 <div style="position: absolute; width: 450px; height: 550px; z-index: 1; left: 400px; top: 60px; padding-left: 60px; padding-right: 60px; padding-top: 90px; padding-bottom: 60px; background-color: #FFFFFF" id="layer1">
 <p align="center"><b>yeyingtomorrow</b></p>
-
+<p>
 1\Clone the repository
 Go to the folder where you want to store your project, and clone the new repository:
 ~$git clone https://github.com/username/username.github.io
+</p>
 
+<p>
 2\Hello World
 Enter the project folder and add an index.html file:
+</p>
 
+<p>
 ~$cd username.github.io
-~$echo "Hello World" > index.html
-
-!!!!
+</p>
+<p>
 ssh -T git@github.com
-
+</p>
+<p>
 change .Git/config
-
+</p>
+<p>
 vim .Git/config
-
+</p>
+<p>
 修改
-
-[remote "origin"]  
-    url = https://github.com/xxxxx/example.git  
-
-为：
-[remote "origin"]  
+</p>
+<p>
+[remote "origin"] 
+<p> 
+    url = https://github.com/xxxxx/example.git 
+</p> 
+</p>
+<p>
+为：[remote "origin"]
+<p>  
     url = https://xxxxx@github.com/xxxxx/example.git 
+</p>
+</p>
 
-
-
-
+<p>
 3\Push it
+</p>
+<p>
 Add, commit, and push your changes:
-
+</p>
+<p>
 ~$git add --all
+</p>
+<p>
 ~$git commit -m "Initial commit"
+</p>
+<p>
 ~$git push -u origin master
-
+</p>
  
 </body>
  
