--- a/20161210_bak.html
+++ b/20161210_bak.html
@@ -1,17 +1,6 @@
+<!DOCTYPE HTML>
 <html>
- 
-<head>
-<meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=utf8">
-<title>yeyingtomorrow</title>
-<meta name="keywords" content="yeyingtomorrow">
-<meta name="description" content="yeyingtomorrow">
-</head>
- 
-<body bgcolor="#808080">
- 
-<div style="position: absolute; width: 450px; height: 900px; z-index: 1; left: 400px; top: 60px; padding-left: 60px; padding-right: 60px; padding-top: 90px; padding-bottom: 60px; background-color: #FFFFFF" id="layer1">
-<p align="center"><b>yeyingtomorrow</b></p>
+<body>
 
 <h1 align="center">安全事故响应的一般过程</h1>
 
@@ -49,8 +38,5 @@
 <p><h3>0x07 总结</h3></p>
     我们在实际处理事故或应急响应的时候可能不会马上想到上面的流程，都是凭经验进行处理或分析，但是在处理完成后仔细想想都会落到上述的六个阶段中。监控与响应是一个对人综合要求满高的岗位（自己说好像有点自夸的意思，哈哈），这就要求所有成员及时更新技术知识，以应对日益复杂的信息安全环境。无论是通过日常工作，或者平时看一些论坛、微博资讯，或者自己去报一些培训班等等，都要给自己创造机会提升能力.
 
-
- 
 </body>
- 
 </html>
