--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta http-equiv="Content-Type" content="text/html; charset=utf8">
-<title>yeyinttomorrow</title>
-<meta name="keywords" content="yeyinttomorrow">
-<meta name="description" content="yeyinttomorrow">
+<title>yeyingtomorrow</title>
+<meta name="keywords" content="yeyingtomorrow">
+<meta name="description" content="yeyingtomorrow">
 </head>
  
 <body bgcolor="#808080">
  
 <div style="position: absolute; width: 450px; height: 550px; z-index: 1; left: 400px; top: 60px; padding-left: 60px; padding-right: 60px; padding-top: 90px; padding-bottom: 60px; background-color: #FFFFFF" id="layer1">
-<p align="center"><b>yeyinttomorrow</b></p>
+<p align="center"><b>yeyingtomorrow</b></p>
 
 <h1 align="center">Go GO GO</h1>
 
