add uri Microsoft_emergency-doc

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 </p>
 
  
+ <p>
+<a href="/pic/Microsoft_emergency-doc-digital.pdf">07-Microsoft_emergency-doc-digital </a>
+</p>
+ 
 </body>
  
 </html>
