add Malicious URL Detection using Machine Learning

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
 <body bgcolor="#808080">
  
-<div style="position: absolute; width: 450px; height: 550px; z-index: 1; left: 400px; top: 60px; padding-left: 60px; padding-right: 60px; padding-top: 90px; padding-bottom: 60px; background-color: #FFFFFF" id="layer1">
+<div style="position: absolute; width: 450px; height: 650px; z-index: 1; left: 400px; top: 60px; padding-left: 60px; padding-right: 60px; padding-top: 90px; padding-bottom: 60px; background-color: #FFFFFF" id="layer1">
 <p align="center"><b>yeyingtomorrow</b></p>
 
 <h1 align="center">GO GO GO </h1>
@@ -59,6 +59,10 @@
 <p>
 <a href="http://vipread.com/">09-信息安全知识库（各种资料收集、下载） </a>
 </p>
+ 
+ <p>
+  <a href="/pic/Malicious URL Detection using Machine Learning.pdf">10-Malicious URL Detection using Machine Learning </a>
+ </p>
  
  <p>
 <a href="http://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-184.pdf">09-Guide for Cybersecuriyt Event Recovery.pdf(后续会需要进行文件上传操作) </a>
