--- a/index.html
+++ b/index.html
@@ -75,5 +75,11 @@
  <a href="/pic/find something from github.pdf">12-find something from github </a>
  </p>
  
+ <p>
+ <a href="/pic/find">13-test </a>
+ </p> 
+ 
+ 
+ 
 </body> 
 </html>
