--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
  </p>
  
  <p>
- <a href="/pic/Detecting+Lateral+Movement+through+Tracking+Event+Logs.pdf">13-Detecting+Lateral+Movement+through+Tracking+Event+Logs </a>
+ <a href="/pic/Detecting+Lateral+Movement+through+Tracking+Event+Logs.pdf">13-Detecting Lateral Movement through Tracking Event+Logs </a>
  </p> 
  
  
