--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
  </p> 
  
 <p>
-<a href="/">14-wooyun wiki </a>
+<a href="/">14-wooyun wiki</a>
+<a href="/">----------（一）企业安全</a>
+<a href="/wooyun wiki/企业安全/0-信息收集/index.html">-----------------（1）信息收集</a>
+<a href="/">----------------------1.1 企业域名收集</a>
 </p> 
  
 </body> 
