--- a/index.html
+++ b/index.html
@@ -80,33 +80,33 @@
  </p> 
  
 <p>
-<a href="/">14-wooyun wiki</a>
+<a>14-wooyun wiki</a>
 </p>
 <p>
-<a href="/">----------企业安全（基于攻击者视角）</a>
+<a>----------企业安全（基于攻击者视角）</a>
 </p>
 <p>
-<a href="/wooyun wiki/企业安全/0-信息收集/index.html">-----------------（0）信息收集</a>
-</p>
-
-<p>
-<a href="/wooyun wiki/企业安全/1-服务配置/index.html">-----------------（1）服务配置</a>
+<a href="/wooyun wiki/企业安全/0-信息收集/index.html">-----------------（0）信息收集-----------------</a>
 </p>
 
 <p>
-<a href="/wooyun wiki/企业安全/2-web应用/index.html">------------------（2）web应用</a>
+<a href="/wooyun wiki/企业安全/1-服务配置/index.html">-----------------（1）服务配置-----------------</a>
 </p>
 
 <p>
-<a href="/wooyun wiki/企业安全/3-安全工具/index.html">------------------（3）安全工具</a>
+<a href="/wooyun wiki/企业安全/2-web应用/index.html">------------------（2）web应用-----------------</a>
 </p>
 
 <p>
-<a href="/wooyun wiki/企业安全/4-安全防御/index.html">------------------（4）安全防御</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/index.html">------------------（3）安全工具-----------------</a>
 </p>
 
 <p>
-<a href="/wooyun wiki/企业安全/5-渗透技巧/index.html">------------------（5）渗透技巧</a>
+<a href="/wooyun wiki/企业安全/4-安全防御/index.html">------------------（4）安全防御-----------------</a>
+</p>
+
+<p>
+<a href="/wooyun wiki/企业安全/5-渗透技巧/index.html">------------------（5）渗透技巧-----------------</a>
 </p>
 
  
