--- a/wooyun wiki/企业安全/0-信息收集/index.html
+++ b/wooyun wiki/企业安全/0-信息收集/index.html
@@ -20,23 +20,23 @@
 </p>
 
 <p>
-<a href="/0.html">01-企业IP收集</a>
+<a href="/wooyun wiki/企业安全/0-信息收集/information_ip [WooYun WiKi].html">01-企业IP收集</a>
 </p>
 
 <p>
-<a href="/0.html">02-端口服务收集</a>
+<a href="/wooyun wiki/企业安全/0-信息收集/information_port [WooYun WiKi].html">02-端口服务收集</a>
 </p>
 
 <p>
-<a href="/0.html">03-WEB应用收集</a>
+<a href="/wooyun wiki/企业安全/0-信息收集/information_web [WooYun WiKi].html">03-WEB应用收集</a>
 </p>
 
 <p>
-<a href="/0.html">04-企业人员信息收集</a>
+<a href="/wooyun wiki/企业安全/0-信息收集/information_human [WooYun WiKi].html">04-企业人员信息收集</a>
 </p>
 
 <p>
-<a href="/0.html">05-企业外围信息收集</a>
+<a href="/404.html">05-企业外围信息收集</a>
 </p>
  
 </body> 
