--- a/wooyun wiki/企业安全/3-安全工具/index.html
+++ b/wooyun wiki/企业安全/3-安全工具/index.html
@@ -20,67 +20,67 @@
 </p>
 
 <p>
-<a href="/">00-DNS分析</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">00-DNS分析</a>
 </p>
 
 <p>
-<a href="/0.html">01-IDS/IPS识别</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">01-IDS/IPS识别</a>
 </p>
 
 <p>
-<a href="/0.html">02-SMB分析</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">02-SMB分析</a>
 </p>
 
 <p>
-<a href="/0.html">03-SMTP分析</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">03-SMTP分析</a>
 </p>
 
 <p>
-<a href="/0.html">04-SNMP分析</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">04-SNMP分析</a>
 </p>
 
 <p>
-<a href="/0.html">05-SSL分析</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">05-SSL分析</a>
 </p>
 
 <p>
-<a href="/0.html">06-VOIP分析</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">06-VOIP分析</a>
 </p>
 
 <p>
-<a href="/0.html">07-VPN分析</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">07-VPN分析</a>
 </p>
 
 <p>
-<a href="/0.html">08-存活主机识别</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">08-存活主机识别</a>
 </p>
 
 <p>
-<a href="/0.html">09-电话分析</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">09-电话分析</a>
 </p>
 
 <p>
-<a href="/0.html">10-服务指纹识别</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">10-服务指纹识别</a>
 </p>
 
 <p>
-<a href="/0.html">11-流量分析</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">11-流量分析</a>
 </p>
 
 <p>
-<a href="/0.html">12-路由分析</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">12-路由分析</a>
 </p>
 
 <p>
-<a href="/0.html">13-情报分析</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">13-情报分析</a>
 </p>
 
 <p>
-<a href="/0.html">14-网络扫描</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">14-网络扫描</a>
 </p>
 
 <p>
-<a href="/0.html">15-系统指纹识别</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">15-系统指纹识别</a>
 </p>
 
 
@@ -89,27 +89,27 @@
 </p>
 
 <p>
-<a href="/0.html">00-Cisco工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">00-Cisco工具集</a>
 </p>
 
 <p>
-<a href="/0.html">01-Fuzzing工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">01-Fuzzing工具集</a>
 </p>
 
 <p>
-<a href="/0.html">02-OpenVAS</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">02-OpenVAS</a>
 </p>
 
 <p>
-<a href="/0.html">03-开源评估软件</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">03-开源评估软件</a>
 </p>
 
 <p>
-<a href="/0.html">04-扫描工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">04-扫描工具集</a>
 </p>
 
 <p>
-<a href="/0.html">05-数据库评估软件</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">05-数据库评估软件</a>
 </p>
 
 
@@ -118,31 +118,31 @@
 </p>
 
 <p>
-<a href="/0.html">00-CMS识别</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">00-CMS识别</a>
 </p>
 
 <p>
-<a href="/0.html">01-IDS/IPS识别</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">01-IDS/IPS识别</a>
 </p>
 
 <p>
-<a href="/0.html">02-Web漏洞扫描</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">02-Web漏洞扫描</a>
 </p>
 
 <p>
-<a href="/0.html">03-Web爬取</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">03-Web爬取</a>
 </p>
 
 <p>
-<a href="/0.html">04-Web应用代理</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">04-Web应用代理</a>
 </p>
 
 <p>
-<a href="/0.html">05-Web应用漏洞挖掘</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">05-Web应用漏洞挖掘</a>
 </p>
 
 <p>
-<a href="/0.html">06-数据库漏洞利用</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">06-数据库漏洞利用</a>
 </p>
 
 
@@ -151,19 +151,19 @@
 </p>
 
 <p>
-<a href="/0.html">00-GPU工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">00-GPU工具集</a>
 </p>
 
 <p>
-<a href="/0.html">01-Passing the Hash</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">01-Passing the Hash</a>
 </p>
 
 <p>
-<a href="/0.html">02-离线攻击</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">02-离线攻击</a>
 </p>
 
 <p>
-<a href="/0.html">03-在线攻击</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">03-在线攻击</a>
 </p>
 
 
@@ -172,23 +172,23 @@
 </p>
 
 <p>
-<a href="/0.html">00-RFID/NFC工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">00-RFID/NFC工具集</a>
 </p>
 
 <p>
-<a href="/0.html">01-Software Defined Radio</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">01-Software Defined Radio</a>
 </p>
 
 <p>
-<a href="/0.html">02-蓝牙工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">02-蓝牙工具集</a>
 </p>
 
 <p>
-<a href="/0.html">03-无线工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">03-无线工具集</a>
 </p>
 
 <p>
-<a href="/0.html">04-其它无线工具</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">04-其它无线工具</a>
 </p>
 
 <p>
@@ -196,31 +196,31 @@
 </p>
 
 <p>
-<a href="/0.html">00-beEF XSS Framework</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">00-beEF XSS Framework</a>
 </p>
 
 <p>
-<a href="/0.html">01-Cisco攻击</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">01-Cisco攻击</a>
 </p>
 
 <p>
-<a href="/0.html">02-Exploit Database</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">02-Exploit Database</a>
 </p>
 
 <p>
-<a href="/0.html">03-Exploit Development Tools</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">03-Exploit Development Tools</a>
 </p>
 
 <p>
-<a href="/0.html">04-Metasploit</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">04-Metasploit</a>
 </p>
 
 <p>
-<a href="/0.html">05-Social Engineering Toolkit</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">05-Social Engineering Toolkit</a>
 </p>
 
 <p>
-<a href="/0.html">06-网络漏洞利用</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">06-网络漏洞利用</a>
 </p>
 
 
@@ -229,23 +229,23 @@
 </p>
 
 <p>
-<a href="/0.html">00-VoIP工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">00-VoIP工具集</a>
 </p>
 
 <p>
-<a href="/0.html">01-Web嗅探</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">01-Web嗅探</a>
 </p>
 
 <p>
-<a href="/0.html">02-网络欺骗</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">02-网络欺骗</a>
 </p>
 
 <p>
-<a href="/0.html">03-网络嗅探</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">03-网络嗅探</a>
 </p>
 
 <p>
-<a href="/0.html">04-语音监控</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">04-语音监控</a>
 </p>
 
 
@@ -255,15 +255,15 @@
 </p>
 
 <p>
-<a href="/0.html">00-Tunnel工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">00-Tunnel工具集</a>
 </p>
 
 <p>
-<a href="/0.html">01-Web后门</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">01-Web后门</a>
 </p>
 
 <p>
-<a href="/0.html">02-系统后门</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">02-系统后门</a>
 </p>
 
 
@@ -273,15 +273,15 @@
 </p>
 
 <p>
-<a href="/0.html">00-Debug工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">00-Debug工具集</a>
 </p>
 
 <p>
-<a href="/0.html">01-反编译</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">01-反编译</a>
 </p>
 
 <p>
-<a href="/0.html">02-其它逆向工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">02-其它逆向工具集</a>
 </p>
 
 <p>
@@ -289,19 +289,19 @@
 </p>
 
 <p>
-<a href="/0.html">00-Voip压力测试</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">00-Voip压力测试</a>
 </p>
 
 <p>
-<a href="/0.html">01-Web压力测试</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">01-Web压力测试</a>
 </p>
 
 <p>
-<a href="/0.html">02-网络压力测试</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">02-网络压力测试</a>
 </p>
 
 <p>
-<a href="/0.html">03-无线压力测试</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">03-无线压力测试</a>
 </p>
 
 <p>
@@ -309,11 +309,11 @@
 </p>
 
 <p>
-<a href="/0.html">00-Android工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">00-Android工具集</a>
 </p>
 
 <p>
-<a href="/0.html">01-Arduino工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">01-Arduino工具集</a>
 </p>
 
 <p>
@@ -321,51 +321,51 @@
 </p>
 
 <p>
-<a href="/0.html">00-PDF取证工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">00-PDF取证工具集</a>
 </p>
 
 <p>
-<a href="/0.html">01-反数字取证</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">01-反数字取证</a>
 </p>
 
 <p>
-<a href="/0.html">02-密码取证工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">02-密码取证工具集</a>
 </p>
 
 <p>
-<a href="/0.html">03-内存取证工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">03-内存取证工具集</a>
 </p>
 
 <p>
-<a href="/0.html">04-取证分割工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">04-取证分割工具集</a>
 </p>
 
 <p>
-<a href="/0.html">05-取证分析工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">05-取证分析工具集</a>
 </p>
 
 <p>
-<a href="/0.html">06-取证哈希验证工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">06-取证哈希验证工具集</a>
 </p>
 
 <p>
-<a href="/0.html">07-取证镜像工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">07-取证镜像工具集</a>
 </p>
 
 <p>
-<a href="/0.html">08-杀毒取证工具集</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">08-杀毒取证工具集</a>
 </p>
 
 <p>
-<a href="/0.html">09-数字取证</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">09-数字取证</a>
 </p>
 
 <p>
-<a href="/0.html">10-数字取证套件</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">10-数字取证套件</a>
 </p>
 
 <p>
-<a href="/0.html">11-网络取证</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">11-网络取证</a>
 </p>
 
 <p>
@@ -373,15 +373,15 @@
 </p>
 
 <p>
-<a href="/0.html">00-Documentation</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">00-Documentation</a>
 </p>
 
 <p>
-<a href="/0.html">01-媒体捕捉</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">01-媒体捕捉</a>
 </p>
 
 <p>
-<a href="/0.html">02-证据管理</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">02-证据管理</a>
 </p>
 
 <p>
@@ -389,43 +389,43 @@
 </p>
 
 <p>
-<a href="/0.html">00-Documentation</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">00-Documentation</a>
 </p>
 
 <p>
-<a href="/0.html">01-媒体捕捉</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">01-媒体捕捉</a>
 </p>
 
 <p>
-<a href="/0.html">02-证据管理</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">02-证据管理</a>
 </p>
 
 <p>
-<a href="/0.html">03-Documentation</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">03-Documentation</a>
 </p>
 
 <p>
-<a href="/0.html">04-媒体捕捉</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">04-媒体捕捉</a>
 </p>
 
 <p>
-<a href="/0.html">05-证据管理</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">05-证据管理</a>
 </p>
 
 <p>
-<a href="/0.html">06-Documentation</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">06-Documentation</a>
 </p>
 
 <p>
-<a href="/0.html">07-媒体捕捉</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">07-媒体捕捉</a>
 </p>
 
 <p>
-<a href="/0.html">08-证据管理</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">08-证据管理</a>
 </p>
 
 <p>
-<a href="/0.html">09-媒体捕捉</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/">09-媒体捕捉</a>
 </p>
 
 
