--- a/wooyun wiki/企业安全/3-安全工具/index.html
+++ b/wooyun wiki/企业安全/3-安全工具/index.html
@@ -20,11 +20,11 @@
 </p>
 
 <p>
-<a href="/wooyun wiki/企业安全/3-安全工具/">00-DNS分析</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/enterprise_dns_analysis [WooYun WiKi].html">00-DNS分析</a>
 </p>
 
 <p>
-<a href="/wooyun wiki/企业安全/3-安全工具/">01-IDS/IPS识别</a>
+<a href="/wooyun wiki/企业安全/3-安全工具/enterprise_ids_ips_identification [WooYun WiKi].html">01-IDS/IPS识别</a>
 </p>
 
 <p>
