add url info get

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
  <a href="/splunk/monitoring-network-traffic-with-sysmon-and-splunk.txt">15- monitoring-network-traffic-with-sysmon-and-splunk </a>
  </p> 
 
+ <p>
+ <a href="/tools/info/virustotal.txt">16- get url information from virustotal </a>
+ </p> 
  
 </body> 
 </html>
