add log cheat-sheet

--- a/index.html
+++ b/index.html
@@ -118,5 +118,31 @@
  <a href="/tools/info/virustotal.txt">16- get url information from virustotal </a>
  </p> 
  
+ <p>
+<a>17- Log Cheat Sheets </a>
+ </p> 
+<p>
+<a href="/log Cheat Sheets/Windows+File+Auditing+Cheat+Sheet+ver+Oct+2016.pdf>------------------（1）Windows+File+Auditing+Cheat+Sheet-----------------</a>
+</p>
+
+<p>
+<a href="/log Cheat Sheets/Windows+Logging+Cheat+Sheet_ver_Oct_2016.pdf>------------------（2）Windows+Logging+Cheat+Sheet-----------------</a>
+</p>
+ 
+
+<p>
+<a href="/log Cheat Sheets/Windows+PowerShell+Logging+Cheat+Sheet+ver+June+2016+v2.pdf>------------------（3）Windows+PowerShell+Logging+Cheat+Sheet-----------------</a>
+</p> 
+ 
+
+<p>
+<a href="/log Cheat Sheets/Windows+Registry+Auditing+Cheat+Sheet+ver+Oct+2016.pdf>------------------（4）Windows+Registry+Auditing+Cheat+Sheet-----------------</a>
+</p>  
+
+
+<p>
+<a href="/log Cheat Sheets/Windows+Splunk+Logging+Cheat+Sheet+v2.0.pdf>------------------（5）Windows+Splunk+Logging+Cheat+Sheet-----------------</a>
+</p> 
+
 </body> 
 </html>
