change log cheat-sheet's name again

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
 <body bgcolor="#808080">
  
-<div style="position: absolute; width: 850px; height: 1850px; z-index: 1; left: 400px; top: 60px; padding-left: 60px; padding-right: 60px; padding-top: 90px; padding-bottom: 60px; background-color: #FFFFFF" id="layer1">
+<div style="position: absolute; width: 850px; height: 1950px; z-index: 1; left: 400px; top: 60px; padding-left: 60px; padding-right: 60px; padding-top: 90px; padding-bottom: 60px; background-color: #FFFFFF" id="layer1">
 <p align="center"><b>yeyingtomorrow</b></p>
 
 <h1 align="center">GO GO GO </h1>
@@ -118,30 +118,32 @@
  <a href="/tools/info/virustotal.txt">16- get url information from virustotal </a>
  </p> 
  
- <p>
-<a>17- Log Cheat Sheets </a>
- </p>
- 
 <p>
-<a href="/log Cheat Sheets/1-Windows File Auditing Cheat Sheet.pdf>------------------（1）Windows+File+Auditing+Cheat+Sheet-----------------</a>
+<a>17-cheat sheet</a>
 </p>
-
 <p>
-<a href="/log Cheat Sheets/2-Windows Logging Cheat Sheet_ver.pdf>------------------（2）Windows+Logging+Cheat+Sheet-----------------</a>
-</p>
-
+<a href="/log Cheat Sheets/1-Windows File Auditing Cheat Sheet.pdf">1-Windows File Auditing Cheat Sheet.pdf</a>
+</p> 
 <p>
-<a href="/log Cheat Sheets/3-Windows PowerShell Logging Cheat Sheet.pdf>------------------（3）Windows+PowerShell+Logging+Cheat+Sheet-----------------</a>
-</p>
-
+<a href="/log Cheat Sheets/2-Windows Logging Cheat Sheet_ver.pdf">2-Windows Logging Cheat Sheet_ver.pdf</a>
+</p> 
 <p>
-<a href="/log Cheat Sheets/4-Windows Registry Auditing Cheat Sheet.pdf>------------------（4）Windows+Registry+Auditing+Cheat+Sheet-----------------</a>
+<a href="/log Cheat Sheets/3-Windows PowerShell Logging Cheat Sheet.pdf">3-Windows PowerShell Logging Cheat Sheet.pdf</a>
+</p> 
+<p>
+<a href="/log Cheat Sheets/4-Windows Registry Auditing Cheat Sheet.pdf">4-Windows Registry Auditing Cheat Sheet.pdf</a>
+</p> 
+<p>
+<a href="/log Cheat Sheets/5-Windows Splunk Logging Cheat Sheet.pdf">5-Windows Splunk Logging Cheat Sheet.pdf</a>
 </p> 
 
 
-<p>
-<a href="/log Cheat Sheets/5-Windows Splunk Logging Cheat Sheet.pdf>------------------（5）Windows+Splunk+Logging+Cheat+Sheet-----------------</a>
-</p> 
+
+
+
+
+
+
 
 </body> 
 </html>
