--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
 </p> 
 <p>
 <a href="/log Cheat Sheets/5-Windows Splunk Logging Cheat Sheet.pdf">@@@@5-Windows Splunk Logging Cheat Sheet.pdf@@@@</a>
+</p>
+<p>
+<a href="/log Cheat Sheets/6-nsa windows event.pdf">@@@@6-nsa windows event.pdf@@@@</a>
 </p> 
 
 
