add whatis cybersecurity.jpg

--- a/index.html
+++ b/index.html
@@ -144,7 +144,10 @@
 <a href="/splunk/conf2015_MGough_MalwareArchaelogy_SecurityCompliance_FindingAdvnacedAttacksAnd.pdf">18-conf2015_MGough_MalwareArchaelogy_SecurityCompliance_FindingAdvnacedAttacksAnd.pdf</a>
 </p> 
 
-
+<p>
+<a href="/pic/WhatisCyberSecurity.jpg">19-WhatisCyberSecurity
+</a>
+</p> 
 
 
 
