add gcc install

--- a/index.html
+++ b/index.html
@@ -145,10 +145,12 @@
 </p> 
 
 <p>
-<a href="/pic/WhatisCyberSecurity.jpg">19-WhatisCyberSecurity
-</a>
+<a href="/pic/WhatisCyberSecurity.jpg">19-WhatisCyberSecurity</a>
 </p> 
 
+<p>
+<a href="/doc/gcc install.txt">20-gcc install 依赖包</a>
+</p>
 
 
 
