--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
 <a href="/Linux _ Mac常用的命令行，如何玩转日志分析与数据批处理/Linux _ Mac常用的命令行，如何玩转日志分析与数据批处理.html">22-Linux _ Mac常用的命令行，如何玩转日志分析与数据批处理</a>
 </p>
 
+<p>
+<a href="/pic/HiddenTreasureETW.pdf">23-HiddenTreasureETW</a>
+</p>
 
 </body> 
 </html>
