--- a/index.html
+++ b/index.html
@@ -164,5 +164,9 @@
 <a href="/pic/HiddenTreasureETW.pdf">23-HiddenTreasureETW</a>
 </p>
 
+<p>
+<a href="/IFS.txt">24-SHELL技巧:处理文件名中的那些空格</a>
+</p>
+
 </body> 
 </html>
