--- a/index.html
+++ b/index.html
@@ -172,5 +172,10 @@
 <a href="/epel.txt">25-添加epel软件源</a>
 </p>
 
+<p>
+<a href="/doc/Phishing Websites Features.docx">26-Phishing Websites Features</a>
+</p>
+
+
 </body> 
 </html>
