monitoring-for-windows-event-logs-and-the-untold-story-of-proper-elk-integration

--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
 </p>
 
 
+<p>
+<a href="/doc/monitoring-for-windows-event-logs-and-the-untold-story-of-proper-elk-integration.pdf">27-monitoring-for-windows-event-logs-and-the-untold-story-of-proper-elk-integration</a>
+</p>
 
 
 
