--- a/index.html
+++ b/index.html
@@ -181,7 +181,9 @@
 <a href="/doc/monitoring-for-windows-event-logs-and-the-untold-story-of-proper-elk-integration.pdf">27-monitoring-for-windows-event-logs-and-the-untold-story-of-proper-elk-integration</a>
 </p>
 
-
+<p>
+<a href="/log Cheat Sheets/7-security-incident-log-review-checklist.pdf">28-security-incident-log-review-checklist</a>
+</p>
 
 </body> 
 </html>
