--- a/index.html
+++ b/index.html
@@ -185,5 +185,9 @@
 <a href="/log Cheat Sheets/7-security-incident-log-review-checklist.pdf">28-security-incident-log-review-checklist</a>
 </p>
 
+<p>
+<a href="/log Cheat Sheets/8-Windows+ATT&CK_Logging+Cheat+Sheet_ver_Sept_2018.pdf">29-Windows+ATT&CK_Logging+Cheat+Sheet_ver_Sept_2018</a>
+</p>
+ 
 </body> 
 </html>
